--- a/demo/index.html
+++ b/demo/index.html
@@ -15,7 +15,8 @@
       <h1>Hello World!</h1>
   </div>
 
-  <script src="../build/index.js"></script>
+  <!-- index.js as found in build/index.js -->
+  <script src="index.js"></script>
   <script src="main.js"></script>
 </body>
 </html>
